# rebel

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  MEMORY.md  README.md
_x_tests/: README.md  compile_test.rs  helpers.rs  mem_tests.rs  mod.rs  parse_test.rs
benches/: memory_benchmarks.rs  parser_benchmarks.rs  vm_benchmarks.rs
memory-bank/: .clinerules  activeContext.md  memory-system.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: intrinsic.rs  lib.rs  mem.rs  mem2.rs  mem3.rs  mem_x.rs  mem_y.rs  parse.rs  parser.rs  stdlib.rs  value.rs  vm.rs
src/tests/: block_test.rs  mem_address_test.rs  mem_test.rs  memory_debug.rs  mod.rs  parse_test.rs  parser_test.rs  string_test.rs  test_utils.rs  value_test.rs
tests/: README.md  compile_test.rs  debug_mem.rs  helpers.rs  mem_tests.rs  mod.rs  parse_test.rs  specific_debug.rs  vm_test.rs
